--- a/app/globals.css
+++ b/app/globals.css
@@ -2,6 +2,10 @@ body {
     position: relative;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 #app {
     display: flex;
     flex-direction: column;
